org/force-app/main/default/objects/Account/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <label>Tipo tributação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPF / CNPJ simples</fullName>
            </value>
            <value>
                <fullName>CNPJ com ICMS 0%</fullName>
            </value>
            <value>
                <fullName>CNPJ em geral</fullName>
            </value>
            <value>
                <fullName>CNPJ e Federal com ISS</fullName>
            </value>
            <value>
                <fullName>Orgão Federal sem ISS</fullName>
            </value>
            <value>
                <fullName>Orgão Federal com ISS, CSRF, IR 4,8%</fullName>
            </value>
            <value>
                <fullName>Orgão Federal com ISS, IR 1,5%</fullName>
            </value>
            <value>
                <fullName>Orgão Federal com ISS, IR 4,8%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>