org/force-app/main/default/objects/Account/fields/ValidDocument__c.field-meta.xml
<CustomField>
    <fullName>ValidDocument__c</fullName>
    <formula>IF(ISBLANK(LastValidDocument__c), FALSE, LastValidDocument__c &gt;= (NOW() - 180))</formula>
    <label>Documentação atualizada?</label>
    <type>Checkbox</type>
</CustomField>