org/force-app/main/default/objects/Account/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <label>Pessoa Física</label>
</RecordType>