org/force-app/main/default/objects/Account/recordTypes/LegalEntity.recordType-meta.xml
<RecordType>
    <fullName>LegalEntity</fullName>
    <active>true</active>
    <label>Pessoa Jurídica</label>
</RecordType>