org/force-app/main/default/objects/Account/recordTypes/LegalEntity_B2B.recordType-meta.xml
<RecordType>
    <fullName>LegalEntity_B2B</fullName>
    <active>true</active>
    <label>B2B - Pessoa jurídica</label>
</RecordType>