org/force-app/main/default/objects/Account/recordTypes/PersonEntity_B2B.recordType-meta.xml
<RecordType>
    <fullName>PersonEntity_B2B</fullName>
    <active>false</active>
    <label>B2B - Pessoa física</label>
</RecordType>