org/force-app/main/default/objects/Account/recordTypes/vlocity_cmt__Subscriber.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Subscriber</fullName>
    <active>false</active>
    <description>Use Subscriber accounts to represent who uses the Services/Products of a business account, consumer account or service aggregator account.</description>
    <label>Subscriber</label>
</RecordType>