org/force-app/main/default/objects/Account/validationRules/BillingAddressRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingAddressRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        ISBLANK(BillingStreet),
        ISBLANK(BillingAddressComplement__c),
        ISBLANK(BillingCity),
        ISBLANK(BillingState),
        ISBLANK(BillingCountry),
        ISBLANK( BillingAddressNumber__c ),
        ISBLANK( BillingDistrict__c ),
        NOT(
            REGEX(BillingPostalCode, &quot;^[0-9]{5}-[0-9]{3}$&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Por favor, preencha endereço com as informações: Logradouro, complemento, cidade, estado, país e CEP no formato 99999-999.</errorMessage>
</ValidationRule>