org/force-app/main/default/objects/Account/validationRules/ImpedeTrocaProprietario.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeTrocaProprietario</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
				ISCHANGED(OwnerId),
    OR(
        RecordType.DeveloperName = &quot;PersonEntity_B2B&quot;,
        RecordType.DeveloperName = &quot;LegalEntity_B2B&quot;
    ),
				AND(
        NOT(
            OR(
                $Profile.Name = &quot;Admin Acesso&quot;,
                $Profile.Name = &quot;Administrador do sistema&quot;,
                $Profile.Name = &quot;B2B - Backoffice&quot;
            )
        ),
								NOT(Bypass__c)
				)
)</errorConditionFormula>
    <errorMessage>Você não tem permissão para alterar o proprietário desta conta.</errorMessage>
</ValidationRule>