org/force-app/main/default/objects/Account/validationRules/ImpedirMudancaDeEndereco.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedirMudancaDeEndereco</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				RecordTypeName__c = &quot;B2B - Pessoa jurídica&quot;,
				NOT(ISNEW()),
				NOT(Bypass__c),
				OR(
        ISCHANGED(BillingAddressComplement__c),
								ISCHANGED(BillingAddressNumber__c),
        ISCHANGED(BillingCity),
        ISCHANGED(BillingCountryCode),
        ISCHANGED(BillingNeighborhood__c),
        ISCHANGED(BillingObservations__c),
        ISCHANGED(BillingPostalCode),
        ISCHANGED(BillingStateCode),
        ISCHANGED(BillingStreet),
        
								ISCHANGED(ShippingAddressComplement__c),
								ISCHANGED(ShippingAddressNumber__c),
        ISCHANGED(ShippingCity),
        ISCHANGED(ShippingCountryCode),
        ISCHANGED(ShippingNeighborhood__c),
        ISCHANGED(ShippingObservations__c),
        ISCHANGED(ShippingPostalCode),
        ISCHANGED(ShippingStateCode),
        ISCHANGED(ShippingStreet)
				)
)

&amp;&amp;
!ISCHANGED(ByPassStamp__c)</errorConditionFormula>
    <errorMessage>A atualização de endereço deve ser feita pelo objeto personalizado Endereço</errorMessage>
</ValidationRule>