org/force-app/main/default/objects/Account/validationRules/PhoneValidationFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneValidationFormat</fullName>
    <active>false</active>
    <description>Regra para validar o preenchimento correto do campo Phone</description>
    <errorConditionFormula>NOT(
  REGEX(Phone, &quot;^[0-9]{10,11}$&quot; )
)</errorConditionFormula>
    <errorMessage>O número de telefone deve estar no formato DDD + Número, com 10 ou 11 dígitos. 
Ex: 11987654321 (celular) ou 1134567890 (fixo).</errorMessage>
</ValidationRule>