org/force-app/main/default/objects/Account/validationRules/ValidaEnderecoObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaEnderecoObrigatorio</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  OR(
    AND(
      OR(
        NOT(ISBLANK(BillingStreet)),
        NOT(ISBLANK(BillingCity)),
        NOT(ISBLANK(BillingState)),
        NOT(ISBLANK(BillingPostalCode)),
        NOT(ISBLANK(BillingCountry)),
        NOT(ISBLANK(BillingNeighborhood__c)),
        NOT(ISBLANK(BillingAddressNumber__c))
      ),
      OR(
        ISBLANK(BillingStreet),
        ISBLANK(BillingCity),
        ISBLANK(BillingState),
        ISBLANK(BillingPostalCode),
        ISBLANK(BillingCountry),
        ISBLANK(BillingNeighborhood__c),
        ISBLANK(BillingAddressNumber__c)
      )
    ),
    AND(
      OR(
        NOT(ISBLANK(ShippingStreet)),
        NOT(ISBLANK(ShippingCity)),
        NOT(ISBLANK(ShippingState)),
        NOT(ISBLANK(ShippingPostalCode)),
        NOT(ISBLANK(ShippingCountry)),
        NOT(ISBLANK(ShippingNeighborhood__c)),
        NOT(ISBLANK(ShippingAddressNumber__c))
      ),
      OR(
        ISBLANK(ShippingStreet),
        ISBLANK(ShippingCity),
        ISBLANK(ShippingState),
        ISBLANK(ShippingPostalCode),
        ISBLANK(ShippingCountry),
        ISBLANK(ShippingNeighborhood__c),
        ISBLANK(ShippingAddressNumber__c)
      )
    )
  )
)</errorConditionFormula>
    <errorMessage>Atenção: Para atualizar a conta, todos os campos da seção &apos;endereço&apos; devem ser preenchidos.</errorMessage>
</ValidationRule>