org/force-app/main/default/objects/Account/listViews/Contas_B2B.listView-meta.xml
<ListView>
    <fullName>Contas_B2B</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>DocumentNumber__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>RecordTypeName__c</columns>
    <columns>FantasyName__c</columns>
    <columns>ValidDocument__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordTypeName__c</field>
        <operation>equals</operation>
        <value>B2B - Pessoa jurídica</value>
    </filters>
    <label>Contas B2B - Todas as Contas</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CLevel</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>